# rust-watch

./: .gitignore  Cargo.toml  README.md
core/application/: Cargo.toml
core/application/src/services/: ingest_telmetry.rs
core/domain/: Cargo.toml
core/domain/src/value_objects/: service_name.rs
deploy/docker/: collector.Dockerfile  docker-compose.yml
docs/: architectire.md  current_status.md  load_testing.md  mvp-scope.md  roadmap.md  system-context.md
docs/adrs/: 0000_index.md  0001_system_architecture.md  0002_service_communication.md  0003_streaming_layer.md  0004_storage_layer.md  0005_api_design.md  0006_telementry_data_model.md
services/agent/: Cargo.toml
services/agent/src/: main.rs
services/collector/: Cargo.toml
services/collector/src/: dtos.rs  handlers.rs  main.rs  services.rs  state.rs  worker.rs
services/query-api/: Cargo.toml
shared/protocol/: Cargo.toml
shared/protocol/src/: lib.rs
