[workspace]
members = [
  "services/agent",
  "services/collector",
  "services/query-api",
  "core/domain",
  "core/application",
  "shared/protocol",
]

resolver = "2"

[workspace.dependencies]
axum = {version = "0.8.9"}
chrono = {version = "0.4.45"}
reqwest = {version = "0.13.4", features = ["json"]}
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1.52.3", features = ["full"]}
